--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,19 @@
 [package]
-name = "lcy_lib"
+name = "lcy_lib_c"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["dylib"]
-name="lcy_lib"
+crate-type = ["cdylib"]
+name="lcy_lib_c"
 path="src/lib.rs"
 
 [dependencies]
 nalgebra = "0.31.0"
 rand = "0.8.5"
+libc="0.2.125"
 
 [dev-dependencies]
 criterion = "0.3.5"
