--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["staticlib"]
 name="lcy_lib_c"
 path="src/lib.rs"
 
@@ -14,14 +14,3 @@ path="src/lib.rs"
 nalgebra = "0.31.0"
 rand = "0.8.5"
 libc="0.2.125"
-
-[dev-dependencies]
-criterion = "0.3.5"
-
-[[bench]]
-name = "criterion"
-harness = false
-
-[[bench]]
-name = "iai"
-harness = false
